src/test/deca/context/invalid/Objet/BadTypeCall2.deca
// Description:
//      calling the function with a different number of arguments
//
// Results:
//      RUle (3.72) No method found
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    int foo() {
        return 1;
    }
}

{
    A a = new A();
    int x = a.foo(5);
}